Merged core changes of Java 11 branch into master branch