@@ -529,6 +529,16 @@ public abstract class DynFormBase {
 			e.printStackTrace();
 		} catch (IllegalAccessException e) {
 			e.printStackTrace();
+		} catch (IllegalArgumentException e) {
+			e.printStackTrace();
+		} catch (InvocationTargetException e) {
+			e.printStackTrace();
+		} catch (NoSuchMethodException e) {
+			e.printStackTrace();
+		} catch (SecurityException e) {
+			e.printStackTrace();
+		} catch (NoClassDefFoundError e) {
+			e.printStackTrace();
 		}
 		return obj;
 	}
@@ -901,7 +911,7 @@ public abstract class DynFormBase {
 			if (stringValue==null | stringValue.equals("")) {
 				returnValue = 0;
 			} else {
-				returnValue = new Float(stringValue);	
+				returnValue = Float.valueOf(stringValue);	
 			}
 			
 		} else if(valueType.equals("int") || valueType.equals("Integer")){
@@ -912,10 +922,10 @@ public abstract class DynFormBase {
 				returnValue = 0;
 			} else {
 				if (stringValue.contains(".")) {
-					returnValue = Math.round(new Double(stringValue));
+					returnValue = Math.round(Double.valueOf(stringValue));
 					jt.setText(returnValue.toString());
 				} else {
-					returnValue = new Integer(stringValue);	
+					returnValue =  Integer.valueOf(stringValue);	
 				}
 			}
 			
